--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
@@ -32,9 +32,15 @@
                             <div class="row">
                                 <div class="col-lg-3">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.Title, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.Title)
+                                        @Html.LabelFor(x => x.PersonTitle, new { @class = "form-label" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownSelectedValue = Model.PersonTitle ?? string.Empty,
+                                   DropdownName = "PersonTitle",
+                                   GroupCode = DropdownTypeEnum.Title.ToString(),
+                                   IsTextValueSame = true
+                               })
+                                        @Html.ValidationMessageFor(x => x.PersonTitle)
                                     </div>
                                 </div>
                                 <div class="col-lg-3">
@@ -60,6 +66,17 @@
                                 </div>
                                 <div class="col-lg-3">
                                     <div class="mb-3">
+                                        @Html.LabelFor(x => x.GenderEnumId, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownSelectedValue = Model.GenderEnumId.ToString(),
+                                   DropdownName = "GenderEnumId",
+                                   GroupCode = DropdownTypeEnum.Gender.ToString()
+                               })   @Html.ValidationMessageFor(x => x.GenderEnumId)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.DateOfBirth, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.DateOfBirth, new { @class = "form-control", @id = "DateOfBirth" })
                                         @Html.ValidationMessageFor(x => x.DateOfBirth, null, new { id = "errorDateOfBirth" })
@@ -71,18 +88,7 @@
                                         @Html.TextBoxFor(x => x.EmailId, new { @class = "form-control", type = "email" })
                                         @Html.ValidationMessageFor(x => x.EmailId)
                                     </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.GenderEnumId, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                               {
-                                   DropdownSelectedValue = Model.GenderEnumId.ToString(),
-                                   DropdownName = "GenderEnumId",
-                                   GroupCode = DropdownTypeEnum.Gender.ToString()
-                               })   @Html.ValidationMessageFor(x => x.GenderEnumId)
-                                    </div>
-                                </div>
+                                </div>                                
                                 <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.MobileNumber, new { @class = "form-label required" })
@@ -99,7 +105,7 @@
                                 </div>
                                 <div class="col-lg-3">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.LeadGenerationSourceEnumId, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.LeadGenerationSourceEnumId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownSelectedValue = Model.LeadGenerationSourceEnumId.ToString(),
@@ -111,7 +117,7 @@
                                 </div>
                                 <div class="col-lg-3">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.LeadGenerationStatusEnumId, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.LeadGenerationStatusEnumId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownSelectedValue = Model.LeadGenerationStatusEnumId.ToString(),
@@ -119,6 +125,18 @@
                                    GroupCode = DropdownTypeEnum.LeadStatus.ToString()
                                })
                                         @Html.ValidationMessageFor(x => x.LeadGenerationStatusEnumId)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.LeadGenerationCategoryEnumIds, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownSelectedValue = Model.LeadGenerationCategoryEnumIds,
+                                   DropdownName = "LeadGenerationCategoryEnumIds",
+                                   GroupCode = DropdownTypeEnum.LeadCategory.ToString()
+                               })
+                                        @Html.ValidationMessageFor(x => x.LeadGenerationCategoryEnumIds)
                                     </div>
                                 </div>
                                 @if (Model.GeneralLeadGenerationMasterId > 0)
