--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatablePagination.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatablePagination.cshtml
@@ -8,6 +8,8 @@
     int b = Model.Page == 1 ? Model.TotalRecordCount : ((Model.RecordPerPage * (Model.Page - 1)) + Model.TotalRecordCount);
     string pointerEventFirstPrevious = Model.Page == 1 ? "pointer-events: none" : "";
     string pointerEventNextLast = Model.TotalPages == Model.Page ? "pointer-events: none" : "";
+    int nextpage = Model.Page + 1;
+    int previouspage = Model.Page - 1;
 }
 <div class="row">
     @if (Model.TotalResults > 0)
@@ -22,16 +24,16 @@
                         <a onclick="CoditechDataTable.LoadListFirst('@controllerName','@actionName')" style="@pointerEventFirstPrevious" aria-controls="datatable" class="page-link">First</a>
                     </li>
                     <li class="paginate_button page-item previous">
-                        <a onclick="CoditechDataTable.LoadListPrevious('@controllerName','@actionName')" style="@pointerEventFirstPrevious" aria-controls="datatable" class="page-link">Previous</a>
+                        <a onclick="CoditechDataTable.LoadListPrevious('@controllerName','@actionName','@previouspage')" style="@pointerEventFirstPrevious" aria-controls="datatable" class="page-link">Previous</a>
                     </li>
                     <li class ="paginate_button page-item">
                         <input id="DataTables_PageIndexId" onchange="CoditechDataTable.LoadList('@controllerName','@actionName')" type="number" class="form-control form-control-sm" value="@Model.Page" style="height: 30px; width: 60px; padding: 0px; text-align: center; border-left: 0; border-radius: 0px;" max="@Model.TotalPages" min="1">
                     </li>
                     <li class="paginate_button page-item next">
-                        <a onclick="CoditechDataTable.LoadListNext('@controllerName','@actionName')" style="@pointerEventNextLast" aria-controls="datatable" class="page-link">Next</a>
+                        <a onclick="CoditechDataTable.LoadListNext('@controllerName','@actionName','@nextpage')" style="@pointerEventNextLast" aria-controls="datatable" class="page-link">Next</a>
                     </li>
                     <li class="paginate_button page-item next">
-                        <a onclick="CoditechDataTable.LoadListLast('@controllerName','@actionName')" style="@pointerEventNextLast" aria-controls="datatable" class="page-link">Last</a>
+                        <a onclick="CoditechDataTable.LoadListLast('@controllerName','@actionName','@Model.TotalPages')" style="@pointerEventNextLast" aria-controls="datatable" class="page-link">Last</a>
                     </li>
                 </ul>
             </div>
