--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/_List.cshtml
@@ -29,7 +29,7 @@
                             </td>
                             <td class="text-center">
                                 <a href="../@controllerName/UpdateGymMembershipPlan?gymMembershipPlanId=@item.GymMembershipPlanId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?gymMembershipPlanId=@item.GymMembershipPlanId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/Delete?gymMembershipPlanIds=@item.GymMembershipPlanId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
