--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuilding/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuilding/CreateEdit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model OrganisationCentrewiseBuildingViewModel
 @{
-    ViewBag.Title = Model.OrganisationCentrewiseBuildingMasterId > 0 ? "Update Organisation Centrewise Building" : "Add Organisation Centrewise Building";
+    ViewBag.Title = Model.OrganisationCentrewiseBuildingMasterId > 0 ? "Update Building" : "Add Building";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, ChangeEvent = "OrganisationCentreWiseBuildingMaster.GetOrganisationCentrewiseBuildingMasterByCentreCode()" };
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, ChangeEvent = "OrganisationCentrewiseBuildingRooms.GetOrganisationCentrewiseBuildingRoomsByCentreCode()" };
 }
 <!-- Page Content-->
 <div class="page-content">
@@ -16,11 +16,11 @@
                         <div class="col">
                             @if (Model.OrganisationCentrewiseBuildingMasterId > 0)
                             {
-                                <h4 class="page-title">Update Organisation Centrewise Building</h4>
+                                <h4 class="page-title">Update Building</h4>
                             }
                             else
                             {
-                                <h4 class="page-title">Create Organisation Centrewise Building</h4>
+                                <h4 class="page-title">Create Building</h4>
                             }
                         </div><!--end col-->
                     </div><!--end row-->
@@ -28,7 +28,7 @@
             </div><!--end col-->
         </div><!--end row-->
         <!-- end page title end breadcrumb -->
-        <div class="row">            
+        <div class="row">
             <div class="col-lg-10">
                 <div class="card">
                     <div class="card-body">
@@ -38,13 +38,6 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.BuildName, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.BuildName, new { @class = "form-control"})
-                                        @Html.ValidationMessageFor(x => x.BuildName)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
                                         @Html.ValidationMessageFor(x => x.CentreCode)
@@ -52,12 +45,18 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
+                                        @Html.LabelFor(x => x.BuildName, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.BuildName, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.BuildName)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.Area, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.Area, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.Area, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.Area)
                                     </div>
-                                </div>                              
-                               
+                                </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
