--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
@@ -84,31 +84,33 @@
                                         @Html.ValidationMessageFor(x => x.PlanDurationInSession)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsRenewable, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.IsRenewable, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.IsRenewable)
-                                    </div>
-                                </div>
+                                @* <div class="col-lg-4">
+                            <div class="mb-3">
+                            @Html.LabelFor(x => x.IsRenewable, new { @class = "form-label" })
+                            <div class="form-check">
+                            @Html.CheckBoxFor(x => x.IsRenewable, new { @class = "form-check-input" })
+                            </div>
+                            </div>
+                            </div> *@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.IsTimebaseBiometricAccess, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.IsTimebaseBiometricAccess, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.IsTimebaseBiometricAccess)
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsTimebaseBiometricAccess, new { @class = "form-check-input" })
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.FromTime, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.FromTime, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.FromTime, new { @class = "form-control", type = "time" })
                                         @Html.ValidationMessageFor(x => x.FromTime)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.ToTime, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.ToTime, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.ToTime, new { @class = "form-control", type = "time" })
                                         @Html.ValidationMessageFor(x => x.ToTime)
                                     </div>
                                 </div>
