--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
@@ -115,7 +115,7 @@
                                         @Html.TextBoxFor(x => x.ToTime, new { @class = "form-control", type = "time" })
                                         @Html.ValidationMessageFor(x => x.ToTime)
                                     </div>
-                                </div> *@
+                                </div> 
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
