--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/UpdateEmployeeeDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/UpdateEmployeeeDetails.cshtml
@@ -65,9 +65,9 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.OrganisationCentrewiseDepartmentId, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.OrganisationCentrewiseDepartmentId, new { @class = "form-control", type = "number" })
-                                        @Html.ValidationMessageFor(x => x.OrganisationCentrewiseDepartmentId)
+                                        @Html.LabelFor(x => x.GeneralDepartmentMasterId, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.GeneralDepartmentMasterId, new { @class = "form-control", type = "number" })
+                                        @Html.ValidationMessageFor(x => x.GeneralDepartmentMasterId)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
@@ -105,7 +105,7 @@
                                         @Html.TextBoxFor(x => x.PassportNumber, new { @class = "form-control", type = "number" })
                                         @Html.ValidationMessageFor(x => x.PassportNumber)
                                     </div>
-                                </div>
+                                </div>                                
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.AdharCardNumber, new { @class = "form-label required" })
@@ -113,6 +113,35 @@
                                         @Html.ValidationMessageFor(x => x.AdharCardNumber)
                                     </div>
                                 </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.BankName, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.BankName, new { @class = "form-control", type = "number" })
+                                        @Html.ValidationMessageFor(x => x.BankName)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.BankAccountNumber, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.BankAccountNumber, new { @class = "form-control", type = "number" })
+                                        @Html.ValidationMessageFor(x => x.BankAccountNumber)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.BankIFSCCode, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.BankIFSCCode, new { @class = "form-control", type = "number" })
+                                        @Html.ValidationMessageFor(x => x.BankIFSCCode)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
+                                    <div class="form-check">
+                                        @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
+                                    </div>
+                                </div>
+                            </div>
                             </div>
 
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
