--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/UpdateEmployeeeDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/UpdateEmployeeeDetails.cshtml
@@ -37,7 +37,7 @@
                             <div class="row">                                
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PersonCode, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.PersonCode, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.PersonCode, new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.PersonCode)
                                     </div>
@@ -53,7 +53,7 @@
                                 </div>
                                @*  <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.UserType, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.UserType, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.UserType, new { @class = "form-control", type = "number" })
                                         @Html.ValidationMessageFor(x => x.UserType)
                                     </div>
@@ -61,7 +61,7 @@
                                                            
                                 <div class="col-lg-4">
                                         <div class="mb-3">
-                                            @Html.LabelFor(x => x.PANCardNumber, new { @class = "form-label required" })
+                                            @Html.LabelFor(x => x.PANCardNumber, new { @class = "form-label" })
                                             @Html.TextBoxFor(x => x.PANCardNumber, new { @class = "form-control" })
                                             @Html.ValidationMessageFor(x => x.PANCardNumber)
                                         </div>
@@ -69,14 +69,14 @@
                             
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.UANNumber, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.UANNumber, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.UANNumber, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.UANNumber)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PassportNumber, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.PassportNumber, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.PassportNumber, new { @class = "form-control"})
                                         @Html.ValidationMessageFor(x => x.PassportNumber)
                                     </div>
@@ -90,28 +90,28 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.BankName, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.BankName, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.BankName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.BankName)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.BankAccountNumber, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.BankAccountNumber, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.BankAccountNumber, new { @class = "form-control", type = "number" })
                                         @Html.ValidationMessageFor(x => x.BankAccountNumber)
                                     </div>
                                 </div>                            
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.BankIFSCCode, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.BankIFSCCode, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.BankIFSCCode, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.BankIFSCCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsEmployeeSmoker, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.IsEmployeeSmoker, new { @class = "form-label required" })
                                         <div class="form-check">
                                             @Html.CheckBoxFor(x => x.IsEmployeeSmoker, new { @class = "form-check-input" })
                                         </div>
@@ -119,7 +119,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                 <div class="mb-3">
-                                    @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
+                                    @Html.LabelFor(x => x.IsActive, new { @class = "form-label required" })
                                     <div class="form-check">
                                         @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
                                     </div>
